update 7/14/22 v-1.3 for 1st submit

--- a/src/components/Footer/FooterSec.css
+++ b/src/components/Footer/FooterSec.css
@@ -38,7 +38,8 @@ footer {
   cursor: pointer;
 }
 
-.powerd{
+.powered{
+  text-transform: uppercase;
   color: #fff;
   font-size: 1.2rem;
   padding-top: 14px;
