--- a/src/components/AccountOverview/AccountOverview.css
+++ b/src/components/AccountOverview/AccountOverview.css
@@ -66,10 +66,11 @@
     font-weight: 700;
     margin-left: 300px !important;
 }
-#all_product{
+.allBtn{
     background-color: #FBB848;
     padding: 5px 20px;
     border: none;
     color: white;
-    border-radius: 10px;
+    margin-left: 20px;
+    border-radius: 5px;
 }
